--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
     "sass": "^1.58.0"
+  },
+  "dependencies": {
+    "gsap": "^3.11.4"
   }
 }
